docker/envoy/envoy-access-log.json
{
  "static_resources": {
    "listeners": [
      {
        "name": "inbound_listener",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 21000
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "inbound_http",
                  "tracing": {
                    "provider": {
                      "name": "envoy.tracers.zipkin",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.config.trace.v3.ZipkinConfig",
                        "collector_cluster": "otel_zipkin",
                        "collector_endpoint": "/api/v2/spans",
                        "collector_endpoint_version": "HTTP_JSON",
                        "shared_span_context": false
                      }
                    }
                  },
                  "route_config": {
                    "name": "local_route",
                    "virtual_hosts": [
                      {
                        "name": "local_service",
                        "domains": ["*"],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "local_app"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "path": "/var/log/envoy/access.log",
                        "log_format": {
                          "json_format": {
                            "method": "%REQ(:METHOD)%",
                            "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                            "response_code": "%RESPONSE_CODE%",
                            "duration": "%DURATION%",
                            "x-request-id": "%REQ(X-REQUEST-ID)%",
                            "traceparent": "%REQ(TRACEPARENT)%",
                            "upstream_host": "%UPSTREAM_HOST%",
                            "bytes_sent": "%BYTES_SENT%",
                            "bytes_received": "%BYTES_RECEIVED%",
                            "protocol": "%PROTOCOL%",
                            "start_time": "%START_TIME%"
                          }
                        }
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "local_app",
        "type": "LOGICAL_DNS",
        "connect_timeout": "1s",
        "load_assignment": {
          "cluster_name": "local_app",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "web",
                        "port_value": 9090
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "otel_zipkin",
        "type": "STRICT_DNS",
        "connect_timeout": "1s",
        "load_assignment": {
          "cluster_name": "otel_zipkin",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "otel-collector",
                        "port_value": 9411
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      }
    ]
  },
  "admin": {
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": 20200
      }
    }
  },
  "stats_config": {
    "stats_tags": [
      {
        "tag_name": "service",
        "fixed_value": "web"
      },
      {
        "tag_name": "local_cluster",
        "fixed_value": "web"
      },
      {
        "tag_name": "consul_destination_service",
        "fixed_value": "web"
      },
      {
        "tag_name": "consul_source_service",
        "fixed_value": "external"
      }
    ]
  }
}
