docker/envoy/envoy-api-gateway.json
{
  "static_resources": {
    "listeners": [
      {
        "name": "api_gateway_listener",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 21001
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "api_gateway_http",
                  "tracing": {
                    "provider": {
                      "name": "envoy.tracers.zipkin",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.config.trace.v3.ZipkinConfig",
                        "collector_cluster": "otel_zipkin",
                        "collector_endpoint": "/api/v2/spans",
                        "collector_endpoint_version": "HTTP_JSON",
                        "shared_span_context": false
                      }
                    }
                  },
                  "route_config": {
                    "name": "api_gateway_route",
                    "virtual_hosts": [
                      {
                        "name": "api_gateway",
                        "domains": ["*"],
                        "routes": [
                          {
                            "match": { "prefix": "/" },
                            "route": { "cluster": "local_web" },
                            "response_headers_to_add": [
                              {
                                "header": {
                                  "key": "x-routed-by",
                                  "value": "consul-api-gateway"
                                },
                                "append_action": "OVERWRITE_IF_EXISTS_OR_ADD"
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  },
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "path": "/var/log/envoy/api-gateway-access.log",
                        "log_format": {
                          "json_format": {
                            "method": "%REQ(:METHOD)%",
                            "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                            "response_code": "%RESPONSE_CODE%",
                            "duration": "%DURATION%",
                            "x-request-id": "%REQ(X-REQUEST-ID)%",
                            "traceparent": "%REQ(TRACEPARENT)%",
                            "upstream_host": "%UPSTREAM_HOST%",
                            "bytes_sent": "%BYTES_SENT%",
                            "bytes_received": "%BYTES_RECEIVED%",
                            "protocol": "%PROTOCOL%",
                            "start_time": "%START_TIME%",
                            "gateway": "api-gateway"
                          }
                        }
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.local_ratelimit",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit",
                        "stat_prefix": "http_local_rate_limiter",
                        "token_bucket": {
                          "max_tokens": 200,
                          "tokens_per_fill": 100,
                          "fill_interval": "1s"
                        },
                        "filter_enabled": {
                          "runtime_key": "local_rate_limit_enabled",
                          "default_value": {
                            "numerator": 100,
                            "denominator": "HUNDRED"
                          }
                        },
                        "filter_enforced": {
                          "runtime_key": "local_rate_limit_enforced",
                          "default_value": {
                            "numerator": 100,
                            "denominator": "HUNDRED"
                          }
                        },
                        "response_headers_to_add": [
                          {
                            "append_action": "OVERWRITE_IF_EXISTS_OR_ADD",
                            "header": {
                              "key": "x-local-rate-limit",
                              "value": "true"
                            }
                          }
                        ]
                      }
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "local_web",
        "type": "LOGICAL_DNS",
        "connect_timeout": "1s",
        "load_assignment": {
          "cluster_name": "local_web",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "web",
                        "port_value": 9090
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "outlier_detection": {
          "consecutive_5xx": "3",
          "interval": "10s",
          "base_ejection_time": "30s",
          "max_ejection_percent": 100
        }
      },
      {
        "name": "otel_zipkin",
        "type": "STRICT_DNS",
        "connect_timeout": "1s",
        "load_assignment": {
          "cluster_name": "otel_zipkin",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "otel-collector",
                        "port_value": 9411
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      }
    ]
  },
  "admin": {
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": 20201
      }
    }
  },
  "stats_config": {
    "stats_tags": [
      {
        "tag_name": "service",
        "fixed_value": "api-gateway"
      },
      {
        "tag_name": "local_cluster",
        "fixed_value": "api-gateway"
      },
      {
        "tag_name": "consul_destination_service",
        "fixed_value": "web"
      },
      {
        "tag_name": "consul_source_service",
        "fixed_value": "external"
      }
    ]
  }
}
