docker/envoy/envoy-terminating-gateway.json
{
  "static_resources": {
    "listeners": [
      {
        "name": "terminating_gateway_listener",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 9190
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "terminating_gateway_http",
                  "route_config": {
                    "name": "terminating_gateway_route",
                    "virtual_hosts": [
                      {
                        "name": "rates_external",
                        "domains": ["*"],
                        "routes": [
                          {
                            "match": { "prefix": "/" },
                            "route": { "cluster": "rates_external" },
                            "request_headers_to_add": [
                              {
                                "header": {
                                  "key": "x-via-gateway",
                                  "value": "consul-terminating-gateway"
                                },
                                "append_action": "OVERWRITE_IF_EXISTS_OR_ADD"
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  },
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "path": "/dev/stdout",
                        "log_format": {
                          "json_format": {
                            "method": "%REQ(:METHOD)%",
                            "path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                            "response_code": "%RESPONSE_CODE%",
                            "duration": "%DURATION%",
                            "upstream_host": "%UPSTREAM_HOST%",
                            "start_time": "%START_TIME%",
                            "gateway": "terminating-gateway",
                            "external_service": "rates"
                          }
                        }
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "rates_external",
        "type": "STRICT_DNS",
        "connect_timeout": "5s",
        "load_assignment": {
          "cluster_name": "rates_external",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "rates",
                        "port_value": 9090
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      }
    ]
  },
  "admin": {
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": 20202
      }
    }
  },
  "stats_config": {
    "stats_tags": [
      {
        "tag_name": "service",
        "fixed_value": "terminating-gateway"
      },
      {
        "tag_name": "local_cluster",
        "fixed_value": "terminating-gateway"
      },
      {
        "tag_name": "consul_destination_service",
        "fixed_value": "rates"
      },
      {
        "tag_name": "consul_source_service",
        "fixed_value": "currency"
      }
    ]
  }
}
